--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Example name</string>
 <!--    <string name="web_hostname">kibana.lt.loc</string> Doesnt works-->
-    <string name="web_url">https://example.com/something</string>
+    <string name="web_url">https://scentora-shop.netlify.app</string>
 </resources>
 
     <!-- To use file as web_url, set it to; "file:///android_asset/index.html"); -->
