--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Example name</string>
+    <string name="app_name">Scentora</string>
 <!--    <string name="web_hostname">kibana.lt.loc</string> Doesnt works-->
     <string name="web_url">https://scentora-shop.netlify.app</string>
 </resources>
